# soarm_mjlab

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md
docs/: reach_improvement_plan.md  reach_training_debug_log.md  reach_training_debug_log_v1_v11.md  residual_ik_training_log.md  v13_goal_perturbation_spec.md  vast_ai_training.md
scripts/: README.md  list_envs.py  play.py  push_to_hub.py  setup_remote.sh  train.py
soarm_mjlab/: __init__.py  _mjlab_compat.py
soarm_mjlab/assets/: __init__.py
soarm_mjlab/assets/robots/: __init__.py
soarm_mjlab/assets/robots/so_arm100/: __init__.py  so_arm100_constants.py
soarm_mjlab/tasks/: __init__.py
soarm_mjlab/tasks/reach/: __init__.py  reach_env_cfg.py
soarm_mjlab/tasks/reach/config/: __init__.py
soarm_mjlab/tasks/reach/config/so_arm100/: __init__.py  env_cfgs.py  rl_cfg.py
soarm_mjlab/tasks/reach/mdp/: __init__.py  actions.py  commands.py  observations.py  rewards.py  terminations.py
soarm_mjlab/tasks/reach/rl/: __init__.py  runner.py
tests/: conftest.py  test_asset_so_arm100.py  test_env_reach.py  test_mdp_reach.py  test_package.py  test_push_to_hub.py  test_train_smoke.py
